# reachmjai

./: cmake_autodl.sh  cmake_cmd_record.txt  cmake_local.sh  design.txt  sync.sh
experiment/: CMakeLists.txt  exp_network_clone.cpp  fit_ev.cpp  test_libtorch_and_cuda.cpp
test/: CMakeLists.txt  test_libtorch_and_cuda.cpp
